--- a/JeuDuMoulin/JeuDuMoulin.csproj
+++ b/JeuDuMoulin/JeuDuMoulin.csproj
@@ -52,7 +52,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Game.cs" />
     <Compile Include="Graph.cs" />
+    <Compile Include="IPlayer.cs" />
     <Compile Include="Plateau.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -61,6 +63,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
